--- a/afterbefore.html
+++ b/afterbefore.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>La Collection - Eugénie Fernet</title>
+  <title>After Before - Eugénie Fernet</title>
   <link rel="icon" type="image/png" href="favi.png">
-  <meta name="description" content="Portfolio de Eugénie Fernet, projet coffret graphique.">
+  <meta name="description" content="Portfolio de Eugénie Fernet">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
