--- a/afterbefore.html
+++ b/afterbefore.html
@@ -37,16 +37,16 @@
 
   <div class="slider-container">
   <div class="slider">
-    <div class="slide"><img src="img/EDITIONS/_MG_9254.jpg" alt=""></div>
-    <div class="slide"><img src="img/EDITIONS/_MG_9304.jpg" alt=""></div>
-    <div class="slide"><img src="img/EDITIONS/_MG_9238.jpg" alt=""></div>
-    <div class="slide"><img src="img/EDITIONS/_MG_9295.jpg" alt=""></div>
-    <div class="slide"><img src="img/EDITIONS/_MG_9241.jpg" alt=""></div>
-    <div class="slide"><img src="img/EDITIONS/_MG_9308.jpg" alt=""></div>
-    <div class="slide"><img src="img/EDITIONS/_MG_9273.jpg" alt=""></div>
-    <div class="slide"><img src="img/EDITIONS/_MG_2162.jpg" alt=""></div>
-    <div class="slide"><img src="img/EDITIONS/_MG_2163.jpg" alt=""></div>
-    <div class="slide"><img src="img/EDITIONS/_MG_2172.jpg" alt=""></div>
+    <div class="slide"><img src="img/EDITIONS/_MG_9254.jpeg" alt=""></div>
+    <div class="slide"><img src="img/EDITIONS/_MG_9304.jpeg" alt=""></div>
+    <div class="slide"><img src="img/EDITIONS/_MG_9238.jpeg" alt=""></div>
+    <div class="slide"><img src="img/EDITIONS/_MG_9295.jpeg" alt=""></div>
+    <div class="slide"><img src="img/EDITIONS/_MG_9241.jpeg" alt=""></div>
+    <div class="slide"><img src="img/EDITIONS/_MG_9308.jpeg" alt=""></div>
+    <div class="slide"><img src="img/EDITIONS/_MG_9273.jpeg" alt=""></div>
+    <div class="slide"><img src="img/EDITIONS/_MG_2162.jpeg" alt=""></div>
+    <div class="slide"><img src="img/EDITIONS/_MG_2163.jpeg" alt=""></div>
+    <div class="slide"><img src="img/EDITIONS/_MG_2172.jpeg" alt=""></div>
   </div>
 </div>
 
