--- a/magazine1.html
+++ b/magazine1.html
@@ -60,7 +60,7 @@
 
   <!-- JavaScript placé à la fin du body -->
   <script>
- document.addEventListener('DOMContentLoaded', () => {
+document.addEventListener('DOMContentLoaded', () => {
   // === Gestion de la modale d'images ===
   const modal = document.getElementById('imageModal');
   const modalImg = document.getElementById('modalImg');
@@ -69,51 +69,47 @@
 
   // Ouvre la modale lorsqu'une image est cliquée
   images.forEach(img => {
-    img.onclick = function() {
+    img.addEventListener('click', () => {
       modal.style.display = "block";
-      modalImg.src = this.src;
-    };
+      modalImg.src = img.src;
+    });
   });
 
-  // Ferme la modale en cliquant sur le bouton de fermeture
-  closeModal.onclick = function() {
+  // Ferme la modale
+  closeModal.addEventListener('click', () => {
     modal.style.display = "none";
-  };
+  });
 
-  // Ferme la modale en cliquant à l'extérieur de l'image
-  window.onclick = function(event) {
+  window.addEventListener('click', (event) => {
     if (event.target === modal) {
       modal.style.display = "none";
     }
-  };
+  });
 
   // === Slider navigation ===
   const slider = document.querySelector('.slider');
-prevBtn.addEventListener('click', () => {
-    slider.scrollBy({ left: -slideWidth, behavior: 'smooth' });
-});
-nextBtn.addEventListener('click', () => {
-    slider.scrollBy({ left: slideWidth, behavior: 'smooth' });
-});
+  const sliderContainer = document.querySelector('.slider-container');
+  const prevBtn = document.getElementById('prevBtn');
+  const nextBtn = document.getElementById('nextBtn');
 
-  // Largeur d'une slide (utile pour défiler slide par slide)
+  // Largeur d'une slide (calculée dynamiquement)
   const slideWidth = document.querySelector('.slide').offsetWidth;
 
   // Navigation via les boutons
   prevBtn.addEventListener('click', () => {
-    sliderContainer.scrollBy({ left: -slideWidth, behavior: 'smooth' });
+    slider.scrollBy({ left: -slideWidth, behavior: 'smooth' });
   });
 
   nextBtn.addEventListener('click', () => {
-    sliderContainer.scrollBy({ left: slideWidth, behavior: 'smooth' });
+    slider.scrollBy({ left: slideWidth, behavior: 'smooth' });
   });
 
   // Navigation via les touches clavier
   document.addEventListener('keydown', (e) => {
     if (e.key === 'ArrowRight') {
-      sliderContainer.scrollBy({ left: slideWidth, behavior: 'smooth' });
+      slider.scrollBy({ left: slideWidth, behavior: 'smooth' });
     } else if (e.key === 'ArrowLeft') {
-      sliderContainer.scrollBy({ left: -slideWidth, behavior: 'smooth' });
+      slider.scrollBy({ left: -slideWidth, behavior: 'smooth' });
     }
   });
 
