--- a/guitare.html
+++ b/guitare.html
@@ -36,7 +36,7 @@
                 </video>
                 <img src="img/GUITARE/FRANCEGALL3.jpg" alt="Image du projet">
                 <img src="img/GUITARE/guientier.jpg" alt="Image du projet"class="portrait"> <!-- Image verticale -->
-                <img src="img/GUITARE/bahaha copie2.jpg" alt="Image du projet">
+                <img src="img/GUITARE/bahaha.jpg" alt="Image du projet">
                 <img src="img/GUITARE/france gall3.jpg" alt="Image du projet">
                 <img src="img/GUITARE/france gall4.jpg" alt="Image du projet">
             </div>
