--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </a>
          </a>
         <a href="livres.html" class="grid-item horizontal">
-        <img src="img/LIVRES/1.jpeg" alt="Magazine">
+        <img src="img/LIVRES/1.jpeg" alt="Livres">
         <div class="overlay"><span>COUVERTURE DE LIVRES</span></div>
          </a>
         </a>
