--- a/alterego.html
+++ b/alterego.html
@@ -32,13 +32,13 @@
                 <p>En quête de nouvelles expériences, je me suis essayée aux autoportraits. Voici donc mes tout premiers autoportraits photographiques. J'ai laissé libre cours à l'expérimentation et à mon imagination.</p>
             </div>
             <div class="project-gallery">
-                <img src="img/alter ego/_MG_3356.jpeg" alt="Image du projet"class="portrait"> <!-- Image verticale -->
+                <img src="img/alter ego/3356.jpeg" alt="Image du projet"class="portrait"> <!-- Image verticale -->
                 <img src="img/alter ego/3 copie.jpg" alt="Image du projet">
-                <img src="img/alter ego/_MG_3385.jpg" alt="Image du projet">
-                <img src="img/alter ego/_MG_3304.jpg" alt="Image du projet"class="portrait"> <!-- Image verticale -->
-                <img src="img/alter ego/_MG_3365.jpg" alt="Image du projet"class="portrait"> <!-- Image verticale -->
-                <img src="img/alter ego/_MG_3256.jpg" alt="Image du projet"class="portrait"> <!-- Image verticale -->
-                <img src="img/alter ego/_MG_3371.jpg" alt="Image du projet"class="portrait"> <!-- Image verticale -->
+                <img src="img/alter ego/3385.jpg" alt="Image du projet">
+                <img src="img/alter ego/3304.jpg" alt="Image du projet"class="portrait"> <!-- Image verticale -->
+                <img src="img/alter ego/3365.jpg" alt="Image du projet"class="portrait"> <!-- Image verticale -->
+                <img src="img/alter ego/3256.jpg" alt="Image du projet"class="portrait"> <!-- Image verticale -->
+                <img src="img/alter ego/3371.jpg" alt="Image du projet"class="portrait"> <!-- Image verticale -->
 
 
             </div>
