--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
          </a>
         </a>
         <a href="alterego.html" class="grid-item vertical">
-            <img src="img/alter ego/_MG_3356.jpeg" alt="autoportraits">
+            <img src="img/alter ego/3356.jpeg" alt="autoportraits">
             <div class="overlay"><span>ALTER-EGO</span></div>
         </a>
     </main>
