--- a/a-propos.html
+++ b/a-propos.html
@@ -35,7 +35,7 @@
             <h1>À PROPOS DE MOI</h1>
             <p>
                 Bonjour !
-                Je m'appelle Eugénie Fernet, je suis en deuxième année de design graphique à l'ESAD (École Supérieure d'Art et de Design) d'Amiens. Curieuse et créative, j'aime expérimenter, composer, et tester de nouvelles approches. J'apprécie particulièrement de créer un projet de sa conception à sa réalisation (choix des couleurs, du papier, impression, reliure).
+                Je m'appelle Eugénie Fernet, je suis en deuxième année de design graphique à l'ESAD (École Supérieure d'Art et de Design) d'Amiens, et actuellement en Erasmus à Limerick School of Art and Design-TUS (Irlande). Curieuse et créative, j'aime expérimenter, composer, et tester de nouvelles approches. J'apprécie particulièrement de créer un projet de sa conception à sa réalisation (choix des couleurs, du papier, impression, reliure).
                 <br><br>
                 Je fais aussi beaucoup de photographie (numérique et argentique). J'aime jouer avec la lumière et explorer différentes esthétiques visuelles.
             </p>
