--- a/vidaloca.html
+++ b/vidaloca.html
@@ -52,6 +52,11 @@
                 <img src="img/VIDA LOCA/7_Février_.JPG" alt="Image du projet">
                 <img src="img/VIDA LOCA/8_Février_.JPG" alt="Image du projet">
                 <img src="img/VIDA LOCA/12_Février.jpg" alt="Image du projet">
+                <img src="img/VIDA LOCA/13_Février.jpg" alt="Image du projet">
+                <img src="img/VIDA LOCA/15_Février.JPG" alt="Image du projet">
+                <img src="img/VIDA LOCA/17_Février.JPG" alt="Image du projet">
+                <img src="img/VIDA LOCA/18_Février.JPG" alt="Image du projet">
+                <img src="img/VIDA LOCA/19_Février.JPG" alt="Image du projet">
             </div>
         </div>
 
