--- a/vidaloca.html
+++ b/vidaloca.html
@@ -45,13 +45,13 @@
                 <img src="img/VIDA LOCA/28_Janvier.JPG" alt="Image du projet">
                 <img src="img/VIDA LOCA/30janvier.JPG" alt="Image du projet">
                 <img src="img/VIDA LOCA/31janvier.JPG" alt="Image du projet">
-                <img src="img/VIDA LOCA/1er_Février_.jpg" alt="Image du projet">
-                <img src="img/VIDA LOCA/2_Février_.JPG" alt="Image du projet">
-                <img src="img/VIDA LOCA/3 février.JPG" alt="Image du projet">
-                <img src="img/VIDA LOCA/6_Février_.JPG" alt="Image du projet">
-                <img src="img/VIDA LOCA/7_Février_.JPG" alt="Image du projet">
-                <img src="img/VIDA LOCA/8_Février_.JPG" alt="Image du projet">
-                <img src="img/VIDA LOCA/12_Février.jpg" alt="Image du projet">
+                <img src="img/VIDA LOCA/1er_Février_.jpg" alt="Image du projet">
+                <img src="img/VIDA LOCA/2_Février_.JPG" alt="Image du projet">
+                <img src="img/VIDA LOCA/3 février.JPG" alt="Image du projet">
+                <img src="img/VIDA LOCA/6_Février_.JPG" alt="Image du projet">
+                <img src="img/VIDA LOCA/7_Février_.JPG" alt="Image du projet">
+                <img src="img/VIDA LOCA/8_Février_.JPG" alt="Image du projet">
+                <img src="img/VIDA LOCA/12_Février.jpg" alt="Image du projet">
                 <img src="img/VIDA LOCA/13_Février.jpg" alt="Image du projet">
                 <img src="img/VIDA LOCA/15_Février.JPG" alt="Image du projet">
                 <img src="img/VIDA LOCA/17_Février.JPG" alt="Image du projet">
@@ -108,3 +108,4 @@
 
 </body>
 </html>
+
