--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
             <img src="img/PHOTOS/7.jpeg" alt="photos">
             <div class="overlay"><span>GALERIE PHOTO</span></div>
         </a>
-        <a href="treppenwitz.html" class="grid-item horizontal">
-            <img src="img/TREPPENWITZ/mockt1.jpeg" alt="Treppenwitz">
-            <div class="overlay"><span>TREPPENWITZ</span></div>
-        </a>
+        <a href="flipside.html" class="grid-item horizontal">
+            <img src="img/flipside/animotifs.gif" alt="Branding">
+            <div class="overlay"><span>FLIP SIDE</span></div>
+             </a>
         <a href="guitare.html" class="grid-item vertical">
             <img src="img/GUITARE/gui.jpeg" alt="Volume">
             <div class="overlay"><span>FRANCE GALL</span></div>
@@ -56,9 +56,9 @@
             <img src="img/tennis tournaments 2/4.jpeg" alt="Magazine">
             <div class="overlay"><span>TENNIS TOURNAMENTS 2</span></div>
         </a>
-        <a href="coffret.html" class="grid-item horizontal">
-            <img src="img/coffret/ouvert.jpeg" alt="coffret">
-            <div class="overlay"><span>COFFRET</span></div>
+        <a href="treppenwitz.html" class="grid-item horizontal">
+            <img src="img/TREPPENWITZ/mockt1.jpeg" alt="Treppenwitz">
+            <div class="overlay"><span>TREPPENWITZ</span></div>
         </a>
         <a href="vidaloca.html" class="grid-item vertical">
             <img src="img/VIDA LOCA/19janvier.JPG" alt="autoportraits">
@@ -66,7 +66,7 @@
         </a>
          </a>
         <a href="livres.html" class="grid-item horizontal">
-        <img src="img/LIVRES/1.jpeg" alt="Livres">
+        <img src="img/LIVRES/1.jpeg" alt="Magazine">
         <div class="overlay"><span>COUVERTURE DE LIVRES</span></div>
          </a>
         </a>
@@ -74,6 +74,10 @@
             <img src="img/alter ego/3356.jpeg" alt="autoportraits">
             <div class="overlay"><span>ALTER-EGO</span></div>
         </a>
+         <a href="coffret.html" class="grid-item horizontal">
+            <img src="img/coffret/ouvert.jpeg" alt="coffret">
+            <div class="overlay"><span>COFFRET</span></div>
+            </a>
     </main>
 
     <footer class="site-footer">
