--- a/vidaloca.html
+++ b/vidaloca.html
@@ -57,6 +57,13 @@
                 <img src="img/VIDA LOCA/17_Février.JPG" alt="Image du projet">
                 <img src="img/VIDA LOCA/18_Février.JPG" alt="Image du projet">
                 <img src="img/VIDA LOCA/19_Février.JPG" alt="Image du projet">
+                <img src="img/VIDA LOCA/21_Février.jpg" alt="Image du projet">
+                <img src="img/VIDA LOCA/22_Février.jpg" alt="Image du projet">
+                <img src="img/VIDA LOCA/24_Février.jpg" alt="Image du projet">
+                <img src="img/VIDA LOCA/25_Février.jpg" alt="Image du projet">
+                <img src="img/VIDA LOCA/28_Février.jpg" alt="Image du projet">
+                <img src="img/VIDA LOCA/2_Mars.jpg" alt="Image du projet">
+                <img src="img/VIDA LOCA/3_Mars.jpg" alt="Image du projet">
             </div>
         </div>
 
