--- a/a-propos.html
+++ b/a-propos.html
@@ -12,15 +12,15 @@
         <!-- Logo sticky -->
         <div class="logo">
             <a href="index.html">
-                <img src="img/illus/eugpdg.jpg" alt="Eugénie Fernet">
+                <img src="img/illus/eug.png" alt="Eugénie Fernet">
             </a>
         </div>
         
         <!-- Icônes en haut à droite -->
         <div class="icon-links">
             <ul>
-                <li><a href="https://www.instagram.com/eugenie_psd/">
-                    <img src="img/illus/insta.jpg" alt="Photographie">
+                <li><a href="https://www.instagram.com/eugenie_graphisme/">
+                    <img src="img/illus/insta.jpg" alt="graphisme">
                 </a></li>
             </ul>
         </div>
@@ -29,13 +29,13 @@
     <!-- Contenu principal : image + texte -->
     <main class="about-container">
         <div class="about-image">
-            <img src="img/illus/roue.jpg" alt="Eugénie Fernet">
+            <img src="img/illus/rouenb.jpg" alt="Eugénie Fernet">
         </div>
         <div class="about-text">
             <h1>À PROPOS DE MOI</h1>
             <p>
                 Bonjour !
-                Je m'appelle Eugénie Fernet, je suis en deuxième année de design graphique à l'ESAD (École Supérieure d'Art et de Design) d'Amiens, et actuellement en Erasmus à Limerick School of Art and Design-TUS (Irlande). Curieuse et créative, j'aime expérimenter, composer, et tester de nouvelles approches. J'apprécie particulièrement de créer un projet de sa conception à sa réalisation (choix des couleurs, du papier, impression, reliure).
+                Je m'appelle Eugénie Fernet, je suis en troisième année de design graphique à l'École Supérieure d'Art et de Design d'Amiens. Curieuse et créative, j'aime expérimenter, composer, et tester de nouvelles approches. J'apprécie particulièrement de créer un projet de sa conception à sa réalisation (choix des couleurs, du papier, impression, reliure).
                 <br><br>
                 Je fais aussi beaucoup de photographie (numérique et argentique). J'aime jouer avec la lumière et explorer différentes esthétiques visuelles.
             </p>
