--- a/aerial.html
+++ b/aerial.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La Loutre Cendrée</title>
+    <title>AERIAL</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="inner-page">
@@ -28,20 +28,17 @@
         <!-- Bloc texte + galerie -->
         <div class="project-content">
             <div class="project-text">
-                <h1>LA LOUTRE CENDRÉE</h1>
-                <p>Après plusieurs séances de dessin au Zoo d’Amiens,
-                    retouche et mise en page de 5 dessins dans une micro-édition. Afin de laisser un maximum de place
-                    au dessin, tous les textes sont réalisés en gaufrage.</p>
+                <h1>AERIAL</h1>
+                <p>Illustrations et affiches réalisées pour l'organisme Sweet Retreats, localisé à Mexico, qui propose des stages de cirque aérien.
+                    Mon objectif : créer des affiches parlantes grâce à des illustrations simples et un peu grossières, qui contrastent avec une typographie fine et élégante.</p>
             </div>
             <div class="project-gallery">
-                <img src="img/DESSIN/4.jpeg" alt="Image du projet">
-                <img src="img/DESSIN/3.jpeg" alt="Image du projet">
-                <img src="img/DESSIN/1.jpeg" alt="Image du projet">
-                <img src="img/DESSIN/6.jpeg" alt="Image du projet">
-                <img src="img/DESSIN/5.jpeg" alt="Image du projet">
-                <img src="img/DESSIN/2.jpeg" alt="Image du projet">
-                <img src="img/DESSIN/7.jpeg" alt="Image du projet">
-                <img src="img/DESSIN/8.jpeg" alt="Image du projet">
+                <img src="img/Aerial/affiche 1.jpg" alt="Image du projet"class="portrait"> <!-- Image verticale -->
+                <img src="img/Aerial/affichee 2.jpg" alt="Image du projet"class="portrait"> <!-- Image verticale -->
+                <img src="img/Aerial/affichee 3.jpg" alt="Image du projet"class="portrait"> <!-- Image verticale -->
+                <img src="img/Aerial/situation4.jpg" alt="Image du projet">
+                <img src="img/Aerial/essai.jpg" alt="Image du projet">
+            
             </div>
         </div>
 
@@ -54,7 +51,7 @@
     
         <!-- Illustration à droite -->
         <div class="project-illustration">
-            <img src="img/illus/loutresnb.jpg" alt="Illustration du projet">
+            <img src="img/Aerial/illu4.png" alt="Illustration du projet">
         </div>
     </main>
 
