--- a/guinness2.html
+++ b/guinness2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La Loutre Cendrée</title>
+    <title>A GUINNESS A DAY</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="inner-page">
@@ -28,20 +28,15 @@
         <!-- Bloc texte + galerie -->
         <div class="project-content">
             <div class="project-text">
-                <h1>LA LOUTRE CENDRÉE</h1>
-                <p>Après plusieurs séances de dessin au Zoo d’Amiens,
-                    retouche et mise en page de 5 dessins dans une micro-édition. Afin de laisser un maximum de place
-                    au dessin, tous les textes sont réalisés en gaufrage.</p>
+                <h1>A GUINNESS A DAY</h1>
+                <p>Imprégnée de la culture du pub et de la célèbre campagne de pub Guinness des années 30, je me suis questionnée sur ce que je ferais, moi, si l'on me demandais de faire des affiches pour Guinness. J'ai voulu conserver le côté décalé et illustratif, en réalisant des dessins simples et compréhensifs. J'ai ensuite décliné ces affiches en cartes et en stickers. </p>
             </div>
             <div class="project-gallery">
-                <img src="img/DESSIN/4.jpeg" alt="Image du projet">
-                <img src="img/DESSIN/3.jpeg" alt="Image du projet">
-                <img src="img/DESSIN/1.jpeg" alt="Image du projet">
-                <img src="img/DESSIN/6.jpeg" alt="Image du projet">
-                <img src="img/DESSIN/5.jpeg" alt="Image du projet">
-                <img src="img/DESSIN/2.jpeg" alt="Image du projet">
-                <img src="img/DESSIN/7.jpeg" alt="Image du projet">
-                <img src="img/DESSIN/8.jpeg" alt="Image du projet">
+                <img src="img/guinness dessins/mes1.png" alt="Image du projet"class="portrait"> <!-- Image verticale -->
+                <img src="img/guinness dessins/mes2.png" alt="Image du projet"class="portrait"> <!-- Image verticale -->
+                <img src="img/guinness dessins/mes3.png" alt="Image du projet">
+                <img src="img/guinness dessins/mes5.jpeg" alt="Image du projet">
+            
             </div>
         </div>
 
@@ -54,7 +49,7 @@
     
         <!-- Illustration à droite -->
         <div class="project-illustration">
-            <img src="img/illus/loutresnb.jpg" alt="Illustration du projet">
+            <img src="img/illus/guinness.png" alt="Illustration du projet">
         </div>
     </main>
 
