--- a/index.html
+++ b/index.html
@@ -13,56 +13,68 @@
         <!-- Section du logo qui sera sticky -->
         <div class="logo">
             <a href="a-propos.html">
-                <img src="img/illus/eugpdg.jpg" alt="Eugénie Fernet">
+                <img src="img/illus/eug.png" alt="Eugénie Fernet">
             </a>
         </div>
         
         <!-- Icônes en haut à droite -->
         <div class="icon-links">
             <ul>
-                <li><a href="https://www.instagram.com/eugenie_psd/">
-                    <img src="img/illus/insta.jpg" alt="Photographie">
+                <li><a href="https://www.instagram.com/eugenie_graphisme/">
+                    <img src="img/illus/insta.jpg" alt="graphisme">
                 </a></li>
             </ul>
         </div>
     </header>
 
     <main class="grid-container">
+        <a href="guinness.html" class="grid-item horizontal">
+            <img src="img/POSTERGUINNESS/_MG_9926.jpeg" alt="Dessin">
+            <div class="overlay"><span>GUINNESS' POSTER</span></div>
+        </a>
+        <a href="vidaloca.html" class="grid-item vertical">
+            <img src="img/VIDA LOCA/5.jpeg" alt="autoportraits">
+            <div class="overlay"><span>VIDA LOCA</span></div>
+        </a>
         <a href="loutres.html" class="grid-item horizontal">
             <img src="img/DESSIN/4.jpeg" alt="Dessin">
             <div class="overlay"><span>LA LOUTRE CENDRÉE</span></div>
         </a>
-        <a href="toukiter.html" class="grid-item horizontal">
-            <img src="img/TOUKITER/boites1.jpg" alt="Toukiter">
-            <div class="overlay"><span>TOUKITER</span></div>
-        </a>
-        <a href="galeriephoto.html" class="grid-item vertical">
+       <!-- <a href="galeriephoto.html" class="grid-item vertical">
             <img src="img/PHOTOS/7.jpeg" alt="photos">
             <div class="overlay"><span>GALERIE PHOTO</span></div>
-        </a>
+        </a> -->
+        <a href="aerial.html" class="grid-item vertical">
+            <img src="img/Aerial/affiche1.2.jpg" alt="aerial">
+            <div class="overlay"><span>AERIAL</span></div>
+            </a>
+            <a href="guinness2.html" class="grid-item horizontal">
+                <img src="img/guinness dessins/IMG_1246.png" alt="photos">
+                <div class="overlay"><span>A GUINNESS A DAY</span></div>
+            </a>
         <a href="flipside.html" class="grid-item horizontal">
             <img src="img/flipside/animotifs.gif" alt="Branding">
             <div class="overlay"><span>FLIP SIDE</span></div>
              </a>
+                <a href="toukiter.html" class="grid-item horizontal">
+            <img src="img/TOUKITER/boites1.jpg" alt="Toukiter">
+            <div class="overlay"><span>TOUKITER</span></div>
+        </a>
         <a href="guitare.html" class="grid-item vertical">
             <img src="img/GUITARE/gui.jpeg" alt="Volume">
             <div class="overlay"><span>FRANCE GALL</span></div>
-        </a>
-        <a href="tt1.html" class="grid-item vertical">
-            <img src="img/tennis tournaments 1/4.jpeg" alt="Magazine">
-            <div class="overlay"><span>TENNIS TOURNAMENTS 1</span></div>
         </a>
         <a href="tt2.html" class="grid-item horizontal">
             <img src="img/tennis tournaments 2/4.jpeg" alt="Magazine">
             <div class="overlay"><span>TENNIS TOURNAMENTS 2</span></div>
         </a>
+        <a href="tt1.html" class="grid-item vertical">
+            <img src="img/tennis tournaments 1/4.jpeg" alt="Magazine">
+            <div class="overlay"><span>TENNIS TOURNAMENTS 1</span></div>
+        </a>
         <a href="treppenwitz.html" class="grid-item horizontal">
             <img src="img/TREPPENWITZ/mockt1.jpeg" alt="Treppenwitz">
             <div class="overlay"><span>TREPPENWITZ</span></div>
-        </a>
-        <a href="vidaloca.html" class="grid-item vertical">
-            <img src="img/VIDA LOCA/19janvier.JPG" alt="autoportraits">
-            <div class="overlay"><span>VIDA LOCA</span></div>
         </a>
          </a>
         <a href="livres.html" class="grid-item horizontal">
@@ -70,14 +82,10 @@
         <div class="overlay"><span>COUVERTURE DE LIVRES</span></div>
          </a>
         </a>
-        <a href="alterego.html" class="grid-item vertical">
+         <!-- <a href="alterego.html" class="grid-item vertical">
             <img src="img/alter ego/3356.jpeg" alt="autoportraits">
             <div class="overlay"><span>ALTER-EGO</span></div>
-        </a>
-         <a href="coffret.html" class="grid-item horizontal">
-            <img src="img/coffret/ouvert.jpeg" alt="coffret">
-            <div class="overlay"><span>COFFRET</span></div>
-            </a>
+        </a> -->
     </main>
 
     <footer class="site-footer">
