--- a/toukiter.html
+++ b/toukiter.html
@@ -10,15 +10,15 @@
 
     <div class="logo">
         <a href="index.html">
-            <img src="img/illus/eugpdg.jpg" alt="Eugénie Fernet">
+            <img src="img/illus/eug.png" alt="Eugénie Fernet">
         </a>
     </div>
 
         <!-- Icônes en haut à droite -->
         <div class="icon-links">
             <ul>
-                <li><a href="https://www.instagram.com/eugenie_psd/">
-                    <img src="img/illus/insta.jpg" alt="Photographie">
+                <li><a href="https://www.instagram.com/eugenie_graphisme/">
+                    <img src="img/illus/insta.jpg" alt="graphisme">
                 </a></li>
             </ul>
         </div>
@@ -58,7 +58,7 @@
     
         <!-- Illustration à droite -->
         <div class="project-illustration">
-            <img src="img/illus/toukiter.jpg" alt="Illustration du projet">
+            <img src="img/illus/toukiternb.jpg" alt="Illustration du projet">
         </div>
     </main>
 
