--- a/treppenwitz.html
+++ b/treppenwitz.html
@@ -10,14 +10,14 @@
 
     <div class="logo">
         <a href="index.html">
-            <img src="img/illus/eugpdg.jpg" alt="Eugénie Fernet">
+            <img src="img/illus/eug.png" alt="Eugénie Fernet">
         </a>
     </div>
         <!-- Icônes en haut à droite -->
         <div class="icon-links">
             <ul>
-                <li><a href="https://www.instagram.com/eugenie_psd/">
-                    <img src="img/illus/insta.jpg" alt="Photographie">
+                <li><a href="https://www.instagram.com/eugenie_graphisme/">
+                    <img src="img/illus/insta.jpg" alt="graphisme">
                 </a></li>
             </ul>
         </div>
@@ -56,7 +56,7 @@
     
         <!-- Illustration à droite -->
         <div class="project-illustration">
-            <img src="img/illus/Treppenwitz.jpg" alt="Illustration du projet">
+            <img src="img/illus/treppenwitznb.jpg" alt="Illustration du projet">
         </div>
     </main>
 
