--- a/guitare.html
+++ b/guitare.html
@@ -10,14 +10,14 @@
 
     <div class="logo">
         <a href="index.html">
-            <img src="img/illus/eugpdg.jpg" alt="Eugénie Fernet">
+            <img src="img/illus/eug.png" alt="Eugénie Fernet">
         </a>
     </div>
         <!-- Icônes en haut à droite -->
         <div class="icon-links">
             <ul>
-                <li><a href="https://www.instagram.com/eugenie_psd/">
-                    <img src="img/illus/insta.jpg" alt="Photographie">
+                <li><a href="https://www.instagram.com/eugenie_graphisme/">
+                    <img src="img/illus/insta.jpg" alt="graphisme">
                 </a></li>
             </ul>
         </div>
@@ -28,15 +28,15 @@
         <div class="project-content">
             <div class="project-text">
                 <h1>FRANCE GALL</h1>
-                <p>Conception et réalisation d'une guitare sur la chanteuse France Gall, ainsi qu'un photomontage et une pochette de vinyle. Pour ce projet, j'ai visionné beaucoup de concerts et de clips, et j'ai remarqué qu'une importance particulière était accordée aux instruments, notamment au piano, au saxophone, et à la guitare. Pour plus d'originalité, les touches de piano sont en volume, et permettent de produire des sons. </p>
+                <p>Conception et réalisation d'une guitare sur la chanteuse France Gall, accompagnée d'un photomontage et d'une pochette de vinyle. Guitare pensée pour pouvoir jouer du piano debout. </p>
             </div>
             <div class="project-gallery">
-                <video controls>
-                    <source src="img/GUITARE/resiste.mp4" type="video/mp4">
-                </video>
                 <img src="img/GUITARE/FRANCEGALL3.jpg" alt="Image du projet">
                 <img src="img/GUITARE/guientier.jpg" alt="Image du projet"class="portrait"> <!-- Image verticale -->
                 <img src="img/GUITARE/bahaha.jpg" alt="Image du projet">
+                <video controls>
+                    <source src="img/GUITARE/resiste.mp4" type="video/mp4">
+                </video>
                 <img src="img/GUITARE/france gall3.jpg" alt="Image du projet">
                 <img src="img/GUITARE/france gall4.jpg" alt="Image du projet">
             </div>
@@ -56,7 +56,7 @@
     
         <!-- Illustration à droite -->
         <div class="project-illustration">
-            <img src="img/illus/guitare.jpg" alt="Illustration du projet">
+            <img src="img/illus/francegallnb.jpg" alt="Illustration du projet">
         </div>
     </main>
 
