--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <main class="grid-container">
         <a href="guinness.html" class="grid-item horizontal">
-            <img src="img/POSTERGUINNESS/_MG_9926.jpeg" alt="Dessin">
+            <img src="img/POSTERGUINNESS/26.jpeg" alt="Dessin">
             <div class="overlay"><span>GUINNESS' POSTER</span></div>
         </a>
         <a href="vidaloca.html" class="grid-item vertical">
