--- a/guinness.html
+++ b/guinness.html
@@ -32,12 +32,12 @@
                 <p>Durant mon séjour en Irlande, j'ai croisé un nombre incalculable de fois des posters et des plaques qui vantaient la célèbre bière irlandaise. J'ai décidé de prendre en photo chacune de ces publicités, dans le but d'en faire par la suite un objet graphique qui les répertorie. Poster 40x60cm, impression sur papier chromé pour rappeler l'esthétique du fût et de la cannette de bière. Ceci n'est qu'un faible échantillon de toutes les affiches croisées.</p>
             </div>
             <div class="project-gallery">
-                <img src="img/POSTERGUINNESS/_MG_9917.jpeg" alt="Image du projet">
-                <img src="img/POSTERGUINNESS/_MG_9943.jpeg" alt="Image du projet">
-                <img src="img/POSTERGUINNESS/_MG_9926.jpeg" alt="Image du projet">
-                <img src="img/POSTERGUINNESS/_MG_9934.jpeg" alt="Image du projet">
-                <img src="img/POSTERGUINNESS/_MG_9929.jpeg" alt="Image du projet">
-                <img src="img/POSTERGUINNESS/_MG_9918.jpeg" alt="Image du projet">
+                <img src="img/POSTERGUINNESS/17.jpeg" alt="Image du projet">
+                <img src="img/POSTERGUINNESS/43.jpeg" alt="Image du projet">
+                <img src="img/POSTERGUINNESS/26.jpeg" alt="Image du projet">
+                <img src="img/POSTERGUINNESS/34.jpeg" alt="Image du projet">
+                <img src="img/POSTERGUINNESS/29.jpeg" alt="Image du projet">
+                <img src="img/POSTERGUINNESS/18.jpeg" alt="Image du projet">
                 
             
 
