--- a/aerial.html
+++ b/aerial.html
@@ -30,7 +30,7 @@
             <div class="project-text">
                 <h1>AERIAL</h1>
                 <p>Illustrations et affiches réalisées pour l'organisme Sweet Retreats, localisé à Mexico, qui propose des stages de cirque aérien.
-                    Mon objectif : créer des affiches parlantes grâce à des illustrations simples et un peu grossières, qui contrastent avec une typographie fine et élégante.</p>
+                    Mon objectif : créer des affiches parlantes grâce à des illustrations simples et un trait un peu épais, qui contrastent avec une typographie fine et élégante.</p>
             </div>
             <div class="project-gallery">
                 <img src="img/Aerial/affiche 1.jpg" alt="Image du projet"class="portrait"> <!-- Image verticale -->
@@ -48,11 +48,6 @@
         <img class="modal-content" id="modalImg">
     </div>
 
-    
-        <!-- Illustration à droite -->
-        <div class="project-illustration">
-            <img src="img/Aerial/illu4.png" alt="Illustration du projet">
-        </div>
     </main>
 
     <script>
