--- a/arnauds.html
+++ b/arnauds.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TENNIS TOURAMENTS 2</title>
+    <title>Arnauds</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="inner-page">
@@ -28,21 +28,22 @@
         <!-- Bloc texte + galerie -->
         <div class="project-content">
             <div class="project-text">
-                <h1>TENNIS TOURNAMENTS 2</h1>
-                <p>Création et production d’un magazine bi-mensuel, avec mes propres photos. Ce magazine s’adresse aussi bien aux fans de tennis qu’aux amateurs de photographie. Chaque édition contient 3 photos inédites, tirées sur papiers spéciaux. Un des challenges pour moi était de faire cohabiter le texte et les images, car je voulais mettre beaucoup de photos. </p>
+                <h1>ARNAUDS</h1>
+                <p>Pour ce projet de photographie, je me suis intéressée aux techniciens d'école d'art, qui travaillent souvent dans l'ombre mais sans qui tout fonctionnerait moins bien. J'ai suivi le quotidien des "Arnauds", techniciens à l'ESAD d'Amiens, pendant leurs journées de travail. Projet réalisé sur plusieurs mois. Format de l'édition : 13x13cm, 72 pages, 68 photos. </p>
             </div>
             <div class="project-gallery">
-                <img src="img/tennis tournaments 2/1.jpeg" alt="Image du projet">
-                <img src="img/tennis tournaments 2/3.jpeg" alt="Image du projet">
-                <img src="img/tennis tournaments 2/4.jpeg" alt="Image du projet">
-                <img src="img/tennis tournaments 2/5.jpeg" alt="Image du projet">
-                <img src="img/tennis tournaments 2/6.jpeg" alt="Image du projet">
-                <img src="img/tennis tournaments 2/7.jpeg" alt="Image du projet">
-                <img src="img/tennis tournaments 2/8.jpeg" alt="Image du projet">
-                <img src="img/tennis tournaments 2/9.jpeg" alt="Image du projet">
-                <img src="img/tennis tournaments 2/11.jpeg" alt="Image du projet">
-                <img src="img/tennis tournaments 2/2.jpeg" alt="Image du projet">
-
+                <img src="img/arnauds/couv.jpeg" alt="Image du projet">
+                <img src="img/arnauds/int.jpeg" alt="Image du projet">
+                <img src="img/arnauds/int1.jpeg" alt="Image du projet">
+                <img src="img/arnauds/int3.jpeg" alt="Image du projet">
+                <img src="img/arnauds/int5.jpeg" alt="Image du projet">
+                <img src="img/arnauds/int6.jpeg" alt="Image du projet">
+                 <img src="img/arnauds/int8.jpeg" alt="Image du projet">
+                <img src="img/arnauds/int7.jpeg" alt="Image du projet">
+                <img src="img/arnauds/int4.jpeg" alt="Image du projet">
+                <img src="img/arnauds/crédits.jpeg" alt="Image du projet">
+                <img src="img/arnauds/couvint.jpeg" alt="Image du projet">
+                <img src="img/arnauds/couv2.jpeg" alt="Image du projet">
 
             </div>
         </div>
@@ -52,6 +53,7 @@
         <span class="close">&times;</span>
         <img class="modal-content" id="modalImg">
     </div>
+
     </main>
 
     <script>
@@ -80,7 +82,6 @@
             }
         });
     </script>
-
     
     <footer class="site-footer">
         <div class="footer-content">
@@ -88,6 +89,5 @@
         </div>
     </footer>
 
-    
 </body>
 </html>
