--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <main class="grid-container">
         <a href="guinness.html" class="grid-item horizontal">
-            <img src="img/POSTERGUINNESS/26.jpeg" alt="Poster">
+            <img src="img/POSTERGUINNESS/26.jpeg" alt="Dessin">
             <div class="overlay"><span>GUINNESS' POSTER</span></div>
         </a>
         <a href="vidaloca.html" class="grid-item vertical">
@@ -48,21 +48,33 @@
             <img src="img/Aerial/affiche1.2.jpg" alt="aerial">
             <div class="overlay"><span>AERIAL</span></div>
             </a>
-            <a href="guinness2.html" class="grid-item horizontal">
-                <img src="img/guinness dessins/IMG_1246.png" alt="photos">
-                <div class="overlay"><span>A GUINNESS A DAY</span></div>
+        <a href="deni.html" class="grid-item vertical">
+            <img src="img/DENI/10.jpeg" alt="aerial">
+            <div class="overlay"><span>DÉNI</span></div>
             </a>
+        <a href="arnauds.html" class="grid-item horizontal">
+            <img src="img/arnauds/int1.jpeg" alt="Dessin">
+            <div class="overlay"><span>ARNAUDS</span></div>
+        </a>
         <a href="flipside.html" class="grid-item horizontal">
             <img src="img/flipside/animotifs.gif" alt="Branding">
             <div class="overlay"><span>FLIP SIDE</span></div>
              </a>
-                <a href="toukiter.html" class="grid-item horizontal">
+        <a href="guinness2.html" class="grid-item vertical">
+                <img src="img/guinness dessins/IMG_1246.png" alt="photos">
+                <div class="overlay"><span>A GUINNESS A DAY</span></div>
+            </a>
+         <a href="toukiter.html" class="grid-item horizontal">
             <img src="img/TOUKITER/boites1.jpg" alt="Toukiter">
             <div class="overlay"><span>TOUKITER</span></div>
         </a>
         <a href="guitare.html" class="grid-item vertical">
             <img src="img/GUITARE/gui.jpeg" alt="Volume">
             <div class="overlay"><span>FRANCE GALL</span></div>
+        </a>
+        <a href="treppenwitz.html" class="grid-item horizontal">
+            <img src="img/TREPPENWITZ/mockt1.jpeg" alt="Treppenwitz">
+            <div class="overlay"><span>TREPPENWITZ</span></div>
         </a>
         <a href="tt2.html" class="grid-item horizontal">
             <img src="img/tennis tournaments 2/4.jpeg" alt="Magazine">
@@ -71,10 +83,6 @@
         <a href="tt1.html" class="grid-item vertical">
             <img src="img/tennis tournaments 1/4.jpeg" alt="Magazine">
             <div class="overlay"><span>TENNIS TOURNAMENTS 1</span></div>
-        </a>
-        <a href="treppenwitz.html" class="grid-item horizontal">
-            <img src="img/TREPPENWITZ/mockt1.jpeg" alt="Treppenwitz">
-            <div class="overlay"><span>TREPPENWITZ</span></div>
         </a>
          </a>
         <a href="livres.html" class="grid-item horizontal">
