--- a/index.html
+++ b/index.html
@@ -28,17 +28,21 @@
     </header>
 
     <main class="grid-container">
+        <a href="gaufrage.html" class="grid-item horizontal">
+            <img src="img/workshop/titre.jpg" alt="workshop">
+            <div class="overlay"><span>GAUFRAGE PARTY</span></div>
+        </a>
         <a href="guinness.html" class="grid-item horizontal">
             <img src="img/POSTERGUINNESS/26.jpeg" alt="Dessin">
             <div class="overlay"><span>GUINNESS' POSTER</span></div>
         </a>
-        <a href="vidaloca.html" class="grid-item vertical">
-            <img src="img/VIDA LOCA/5.jpeg" alt="autoportraits">
-            <div class="overlay"><span>VIDA LOCA</span></div>
+        <a href="deni.html" class="grid-item vertical">
+            <img src="img/DENI/10.jpeg" alt="aerial">
+            <div class="overlay"><span>DÉNI</span></div>
         </a>
-        <a href="loutres.html" class="grid-item horizontal">
-            <img src="img/DESSIN/4.jpeg" alt="Dessin">
-            <div class="overlay"><span>LA LOUTRE CENDRÉE</span></div>
+        <a href="arnauds.html" class="grid-item horizontal">
+            <img src="img/arnauds/int1.jpeg" alt="Dessin">
+            <div class="overlay"><span>ARNAUDS</span></div>
         </a>
        <!-- <a href="galeriephoto.html" class="grid-item vertical">
             <img src="img/PHOTOS/7.jpeg" alt="photos">
@@ -48,13 +52,13 @@
             <img src="img/Aerial/affiche1.2.jpg" alt="aerial">
             <div class="overlay"><span>AERIAL</span></div>
             </a>
-        <a href="deni.html" class="grid-item vertical">
-            <img src="img/DENI/10.jpeg" alt="aerial">
-            <div class="overlay"><span>DÉNI</span></div>
-            </a>
-        <a href="arnauds.html" class="grid-item horizontal">
-            <img src="img/arnauds/int1.jpeg" alt="Dessin">
-            <div class="overlay"><span>ARNAUDS</span></div>
+        <a href="vidaloca.html" class="grid-item vertical">
+            <img src="img/VIDA LOCA/5.jpeg" alt="autoportraits">
+            <div class="overlay"><span>VIDA LOCA</span></div>
+        </a>
+        <a href="loutres.html" class="grid-item horizontal">
+            <img src="img/DESSIN/4.jpeg" alt="Dessin">
+            <div class="overlay"><span>LA LOUTRE CENDRÉE</span></div>
         </a>
         <a href="flipside.html" class="grid-item horizontal">
             <img src="img/flipside/animotifs.gif" alt="Branding">
